@@ -8,7 +8,7 @@ long long int atoll(const char* s) {
   int sign=1;
   while ( *s == ' '  ||  (unsigned int)(*s - 9) < 5u) ++s;
   switch (*s) {
-  case '-': sign=-1;
+  case '-': sign=-1; /* fall through */
   case '+': ++s;
   }
   while ((unsigned int) (*s - '0') < 10u) {
