@@ -329,8 +329,13 @@ wsym: ; \
 .type sym,@function; \
 .global sym; \
 sym: \
+.ifge __NR_##name-256 ; \
+	mov	$__NR_##name,%ax; \
+	jmp	__unified_syscall_16bit@PLT;  \
+.else ; \
 	mov	$__NR_##name,%al; \
-	jmp	__unified_syscall@PLT
+	jmp	__unified_syscall@PLT ; \
+.endif
 
 #define syscall(name,sym) \
 .text; \
